# memcomparable

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: serde.rs
src/: de.rs  decimal.rs  error.rs  lib.rs  ser.rs
