[package]
name = "memcomparable"
version = "0.1.0"
edition = "2021"
description = "A memcomparable serialization format."
homepage = "https://github.com/risingwavelabs/memcomparable"
repository = "https://github.com/risingwavelabs/memcomparable"
keywords = ["memcomparable", "serde"]
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
decimal = ["rust_decimal"]

[dependencies]
bytes = "1"
rust_decimal = { version = "1", optional = true }
serde = "1"
thiserror = "1"

[dev-dependencies]
criterion = "0.4"
rand = "0.8"
rust_decimal = { version = "1", features = ["rand"] }
serde = { version = "1", features = ["derive"] }

[[bench]]
name = "serde"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
